force-app/main/default/objects/msf_opportunity_h__x/msf_opportunity_h__x.object-meta.xml
<CustomObject>
    <description>msf_opportunity_h</description>
    <externalDataSource>AWS</externalDataSource>
    <externalName>msf_opportunity_h</externalName>
    <label>Oportunidad histórica</label>
    <pluralLabel>Oportunidades históricas</pluralLabel>
</CustomObject>