force-app/main/default/objects/msf_opportunity_h__x/fields/accountid__c.field-meta.xml
<CustomField>
    <fullName>accountid__c</fullName>
    <description>accountid</description>
    <externalDeveloperName>accountid</externalDeveloperName>
    <label>ID Miembro</label>
    <length>18</length>
    <type>Text</type>
</CustomField>