force-app/main/default/objects/msf_opportunity_h__x/fields/amount__c.field-meta.xml
<CustomField>
    <fullName>amount__c</fullName>
    <description>amount</description>
    <externalDeveloperName>amount</externalDeveloperName>
    <label>Importe</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>