force-app/main/default/objects/msf_opportunity_h__x/fields/campaignid__c.field-meta.xml
<CustomField>
    <fullName>campaignid__c</fullName>
    <description>campaignid</description>
    <externalDeveloperName>campaignid</externalDeveloperName>
    <label>Campaña inicial</label>
    <length>18</length>
    <type>Text</type>
</CustomField>