force-app/main/default/objects/msf_opportunity_h__x/fields/closedate__c.field-meta.xml
<CustomField>
    <fullName>closedate__c</fullName>
    <description>closedate</description>
    <externalDeveloperName>closedate</externalDeveloperName>
    <label>Fecha de cierre</label>
    <type>Date</type>
</CustomField>