force-app/main/default/objects/msf_opportunity_h__x/fields/contactid__c.field-meta.xml
<CustomField>
    <fullName>contactid__c</fullName>
    <description>contactid</description>
    <externalDeveloperName>contactid</externalDeveloperName>
    <label>contactid</label>
    <length>18</length>
    <type>Text</type>
</CustomField>