force-app/main/default/objects/msf_opportunity_h__x/fields/description__c.field-meta.xml
<CustomField>
    <fullName>description__c</fullName>
    <description>description</description>
    <externalDeveloperName>description</externalDeveloperName>
    <label>Descripción</label>
    <length>128</length>
    <type>Text</type>
</CustomField>