force-app/main/default/objects/msf_opportunity_h__x/fields/fiscal__c.field-meta.xml
<CustomField>
    <fullName>fiscal__c</fullName>
    <description>fiscal</description>
    <externalDeveloperName>fiscal</externalDeveloperName>
    <label>fiscal</label>
    <length>6</length>
    <type>Text</type>
</CustomField>