force-app/main/default/objects/msf_opportunity_h__x/fields/fiscalquarter__c.field-meta.xml
<CustomField>
    <fullName>fiscalquarter__c</fullName>
    <description>fiscalquarter</description>
    <externalDeveloperName>fiscalquarter</externalDeveloperName>
    <label>fiscalquarter</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>