force-app/main/default/objects/msf_opportunity_h__x/fields/fiscalyear__c.field-meta.xml
<CustomField>
    <fullName>fiscalyear__c</fullName>
    <description>fiscalyear</description>
    <externalDeveloperName>fiscalyear</externalDeveloperName>
    <label>fiscalyear</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>