force-app/main/default/objects/msf_opportunity_h__x/fields/forecastcategory__c.field-meta.xml
<CustomField>
    <fullName>forecastcategory__c</fullName>
    <description>forecastcategory</description>
    <externalDeveloperName>forecastcategory</externalDeveloperName>
    <label>forecastcategory</label>
    <length>255</length>
    <type>Text</type>
</CustomField>