force-app/main/default/objects/msf_opportunity_h__x/fields/forecastcategoryname__c.field-meta.xml
<CustomField>
    <fullName>forecastcategoryname__c</fullName>
    <description>forecastcategoryname</description>
    <externalDeveloperName>forecastcategoryname</externalDeveloperName>
    <label>forecastcategoryname</label>
    <length>255</length>
    <type>Text</type>
</CustomField>