force-app/main/default/objects/msf_opportunity_h__x/fields/hasopenactivity__c.field-meta.xml
<CustomField>
    <fullName>hasopenactivity__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hasopenactivity</description>
    <externalDeveloperName>hasopenactivity</externalDeveloperName>
    <label>hasopenactivity</label>
    <type>Checkbox</type>
</CustomField>