force-app/main/default/objects/msf_opportunity_h__x/fields/hasopportunitylineitem__c.field-meta.xml
<CustomField>
    <fullName>hasopportunitylineitem__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hasopportunitylineitem</description>
    <externalDeveloperName>hasopportunitylineitem</externalDeveloperName>
    <label>hasopportunitylineitem</label>
    <type>Checkbox</type>
</CustomField>