force-app/main/default/objects/msf_opportunity_h__x/fields/hasoverduetask__c.field-meta.xml
<CustomField>
    <fullName>hasoverduetask__c</fullName>
    <defaultValue>false</defaultValue>
    <description>hasoverduetask</description>
    <externalDeveloperName>hasoverduetask</externalDeveloperName>
    <label>hasoverduetask</label>
    <type>Checkbox</type>
</CustomField>