force-app/main/default/objects/msf_opportunity_h__x/fields/isprivate__c.field-meta.xml
<CustomField>
    <fullName>isprivate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>isprivate</description>
    <externalDeveloperName>isprivate</externalDeveloperName>
    <label>isprivate</label>
    <type>Checkbox</type>
</CustomField>