force-app/main/default/objects/msf_opportunity_h__x/fields/iswon__c.field-meta.xml
<CustomField>
    <fullName>iswon__c</fullName>
    <defaultValue>false</defaultValue>
    <description>iswon</description>
    <externalDeveloperName>iswon</externalDeveloperName>
    <label>iswon</label>
    <type>Checkbox</type>
</CustomField>