force-app/main/default/objects/msf_opportunity_h__x/fields/lastactivitydate__c.field-meta.xml
<CustomField>
    <fullName>lastactivitydate__c</fullName>
    <description>lastactivitydate</description>
    <externalDeveloperName>lastactivitydate</externalDeveloperName>
    <label>lastactivitydate</label>
    <type>Date</type>
</CustomField>