force-app/main/default/objects/msf_opportunity_h__x/fields/lastmodifieddate__c.field-meta.xml
<CustomField>
    <fullName>lastmodifieddate__c</fullName>
    <description>lastmodifieddate</description>
    <externalDeveloperName>lastmodifieddate</externalDeveloperName>
    <label>lastmodifieddate</label>
    <type>DateTime</type>
</CustomField>