force-app/main/default/objects/msf_opportunity_h__x/fields/lastreferenceddate__c.field-meta.xml
<CustomField>
    <fullName>lastreferenceddate__c</fullName>
    <description>lastreferenceddate</description>
    <externalDeveloperName>lastreferenceddate</externalDeveloperName>
    <label>lastreferenceddate</label>
    <type>DateTime</type>
</CustomField>