force-app/main/default/objects/msf_opportunity_h__x/fields/lastvieweddate__c.field-meta.xml
<CustomField>
    <fullName>lastvieweddate__c</fullName>
    <description>lastvieweddate</description>
    <externalDeveloperName>lastvieweddate</externalDeveloperName>
    <label>lastvieweddate</label>
    <type>DateTime</type>
</CustomField>