force-app/main/default/objects/msf_opportunity_h__x/fields/leadsource__c.field-meta.xml
<CustomField>
    <fullName>leadsource__c</fullName>
    <description>leadsource</description>
    <externalDeveloperName>leadsource</externalDeveloperName>
    <label>Canal de entrada 1 inicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>