force-app/main/default/objects/msf_opportunity_h__x/fields/msf_amountnotcurrency_c__c.field-meta.xml
<CustomField>
    <fullName>msf_amountnotcurrency_c__c</fullName>
    <description>msf_amountnotcurrency__c</description>
    <externalDeveloperName>msf_amountnotcurrency__c</externalDeveloperName>
    <label>msf_amountnotcurrency__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>