force-app/main/default/objects/msf_opportunity_h__x/fields/msf_canvasser_c__c.field-meta.xml
<CustomField>
    <fullName>msf_canvasser_c__c</fullName>
    <description>msf_canvasser__c</description>
    <externalDeveloperName>msf_canvasser__c</externalDeveloperName>
    <label>msf_canvasser__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>