force-app/main/default/objects/msf_opportunity_h__x/fields/msf_context_c__c.field-meta.xml
<CustomField>
    <fullName>msf_context_c__c</fullName>
    <description>msf_context__c</description>
    <externalDeveloperName>msf_context__c</externalDeveloperName>
    <label>msf_context__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>