force-app/main/default/objects/msf_opportunity_h__x/fields/msf_crmexternalid_c__c.field-meta.xml
<CustomField>
    <fullName>msf_crmexternalid_c__c</fullName>
    <description>msf_crmexternalid__c</description>
    <externalDeveloperName>msf_crmexternalid__c</externalDeveloperName>
    <label>Id aportación</label>
    <length>255</length>
    <type>Text</type>
</CustomField>