force-app/main/default/objects/msf_opportunity_h__x/fields/msf_currentcampaign_c__c.field-meta.xml
<CustomField>
    <fullName>msf_currentcampaign_c__c</fullName>
    <description>msf_currentcampaign__c</description>
    <externalDeveloperName>msf_currentcampaign__c</externalDeveloperName>
    <label>Campaña actual</label>
    <length>18</length>
    <type>Text</type>
</CustomField>