force-app/main/default/objects/msf_opportunity_h__x/fields/msf_currentleadsource2_c__c.field-meta.xml
<CustomField>
    <fullName>msf_currentleadsource2_c__c</fullName>
    <description>msf_currentleadsource2__c</description>
    <externalDeveloperName>msf_currentleadsource2__c</externalDeveloperName>
    <label>Canal de entrada 2 actual</label>
    <length>255</length>
    <type>Text</type>
</CustomField>