force-app/main/default/objects/msf_opportunity_h__x/fields/msf_currentquotamodification_c__c.field-meta.xml
<CustomField>
    <fullName>msf_currentquotamodification_c__c</fullName>
    <description>msf_currentquotamodification__c</description>
    <externalDeveloperName>msf_currentquotamodification__c</externalDeveloperName>
    <label>msf_currentquotamodification__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>