force-app/main/default/objects/msf_opportunity_h__x/fields/msf_donationvehiclecontact_c__c.field-meta.xml
<CustomField>
    <fullName>msf_donationvehiclecontact_c__c</fullName>
    <description>msf_donationvehiclecontact__c</description>
    <externalDeveloperName>msf_donationvehiclecontact__c</externalDeveloperName>
    <label>Donante por vehículo de donación</label>
    <length>18</length>
    <type>Text</type>
</CustomField>