force-app/main/default/objects/msf_opportunity_h__x/fields/msf_emergencymoment_c__c.field-meta.xml
<CustomField>
    <fullName>msf_emergencymoment_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>msf_emergencymoment__c</description>
    <externalDeveloperName>msf_emergencymoment__c</externalDeveloperName>
    <label>Momento emergencia</label>
    <type>Checkbox</type>
</CustomField>