force-app/main/default/objects/msf_opportunity_h__x/fields/msf_entrydate_c__c.field-meta.xml
<CustomField>
    <fullName>msf_entrydate_c__c</fullName>
    <description>msf_entrydate__c</description>
    <externalDeveloperName>msf_entrydate__c</externalDeveloperName>
    <label>Fecha de entrada</label>
    <type>Date</type>
</CustomField>