force-app/main/default/objects/msf_opportunity_h__x/fields/msf_expirationdate_c__c.field-meta.xml
<CustomField>
    <fullName>msf_expirationdate_c__c</fullName>
    <description>msf_expirationdate__c</description>
    <externalDeveloperName>msf_expirationdate__c</externalDeveloperName>
    <label>Caducidad</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>