force-app/main/default/objects/msf_opportunity_h__x/fields/msf_firstdatehistoricalgift_c__c.field-meta.xml
<CustomField>
    <fullName>msf_firstdatehistoricalgift_c__c</fullName>
    <description>msf_firstdatehistoricalgift__c</description>
    <externalDeveloperName>msf_firstdatehistoricalgift__c</externalDeveloperName>
    <label>msf_firstdatehistoricalgift__c</label>
    <type>Date</type>
</CustomField>