force-app/main/default/objects/msf_opportunity_h__x/fields/msf_iban_c__c.field-meta.xml
<CustomField>
    <fullName>msf_iban_c__c</fullName>
    <description>msf_iban__c</description>
    <externalDeveloperName>msf_iban__c</externalDeveloperName>
    <label>msf_iban__c</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>