force-app/main/default/objects/msf_opportunity_h__x/fields/msf_installmentperiod_c__c.field-meta.xml
<CustomField>
    <fullName>msf_installmentperiod_c__c</fullName>
    <description>msf_installmentperiod__c</description>
    <externalDeveloperName>msf_installmentperiod__c</externalDeveloperName>
    <label>msf_installmentperiod__c</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>