force-app/main/default/objects/msf_opportunity_h__x/fields/msf_ispastdonation_c__c.field-meta.xml
<CustomField>
    <fullName>msf_ispastdonation_c__c</fullName>
    <defaultValue>false</defaultValue>
    <description>msf_ispastdonation__c</description>
    <externalDeveloperName>msf_ispastdonation__c</externalDeveloperName>
    <label>msf_ispastdonation__c</label>
    <type>Checkbox</type>
</CustomField>