force-app/main/default/objects/msf_opportunity_h__x/fields/msf_lastreasoncodereceived_c__c.field-meta.xml
<CustomField>
    <fullName>msf_lastreasoncodereceived_c__c</fullName>
    <description>msf_lastreasoncodereceived__c</description>
    <externalDeveloperName>msf_lastreasoncodereceived__c</externalDeveloperName>
    <label>Último código de devolución</label>
    <length>255</length>
    <type>Text</type>
</CustomField>