force-app/main/default/objects/msf_opportunity_h__x/fields/msf_lastreversaldate_c__c.field-meta.xml
<CustomField>
    <fullName>msf_lastreversaldate_c__c</fullName>
    <description>msf_lastreversaldate__c</description>
    <externalDeveloperName>msf_lastreversaldate__c</externalDeveloperName>
    <label>Fecha de impago</label>
    <type>Date</type>
</CustomField>