force-app/main/default/objects/msf_opportunity_h__x/fields/msf_leadid_c__c.field-meta.xml
<CustomField>
    <fullName>msf_leadid_c__c</fullName>
    <description>msf_leadid__c</description>
    <externalDeveloperName>msf_leadid__c</externalDeveloperName>
    <label>msf_leadid__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>