force-app/main/default/objects/msf_opportunity_h__x/fields/msf_leadsource2level_c__c.field-meta.xml
<CustomField>
    <fullName>msf_leadsource2level_c__c</fullName>
    <description>msf_leadsource2level__c</description>
    <externalDeveloperName>msf_leadsource2level__c</externalDeveloperName>
    <label>Canal de entrada 2 inicial</label>
    <length>255</length>
    <type>Text</type>
</CustomField>