force-app/main/default/objects/msf_opportunity_h__x/fields/msf_legacyopportunity_c__c.field-meta.xml
<CustomField>
    <fullName>msf_legacyopportunity_c__c</fullName>
    <description>msf_legacyopportunity__c</description>
    <externalDeveloperName>msf_legacyopportunity__c</externalDeveloperName>
    <label>msf_legacyopportunity__c</label>
    <length>18</length>
    <type>Text</type>
</CustomField>