force-app/main/default/objects/msf_opportunity_h__x/fields/msf_modificationcampaign_c__c.field-meta.xml
<CustomField>
    <fullName>msf_modificationcampaign_c__c</fullName>
    <description>msf_modificationcampaign__c</description>
    <externalDeveloperName>msf_modificationcampaign__c</externalDeveloperName>
    <label>Campaña de modificación</label>
    <length>18</length>
    <type>Text</type>
</CustomField>