force-app/main/default/objects/msf_opportunity_h__x/fields/msf_ntimesreversed_c__c.field-meta.xml
<CustomField>
    <fullName>msf_ntimesreversed_c__c</fullName>
    <description>msf_ntimesreversed__c</description>
    <externalDeveloperName>msf_ntimesreversed__c</externalDeveloperName>
    <label>Número de Devoluciones</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>