force-app/main/default/objects/msf_opportunity_h__x/fields/msf_rating_c__c.field-meta.xml
<CustomField>
    <fullName>msf_rating_c__c</fullName>
    <description>msf_rating__c</description>
    <externalDeveloperName>msf_rating__c</externalDeveloperName>
    <label>Caliente, templado o frío</label>
    <length>255</length>
    <type>Text</type>
</CustomField>