force-app/main/default/objects/msf_opportunity_h__x/fields/msf_recurringperiod_c__c.field-meta.xml
<CustomField>
    <fullName>msf_recurringperiod_c__c</fullName>
    <description>msf_recurringperiod__c</description>
    <externalDeveloperName>msf_recurringperiod__c</externalDeveloperName>
    <label>Periodicidad donación recurrente</label>
    <length>255</length>
    <type>Text</type>
</CustomField>