force-app/main/default/objects/msf_opportunity_h__x/fields/msf_segment_c__c.field-meta.xml
<CustomField>
    <fullName>msf_segment_c__c</fullName>
    <description>msf_segment__c</description>
    <externalDeveloperName>msf_segment__c</externalDeveloperName>
    <label>msf_segment__c</label>
    <length>40</length>
    <type>Text</type>
</CustomField>