force-app/main/default/objects/msf_opportunity_h__x/fields/name__c.field-meta.xml
<CustomField>
    <fullName>name__c</fullName>
    <description>name</description>
    <externalDeveloperName>name</externalDeveloperName>
    <label>Nombre de la oportunidad</label>
    <length>120</length>
    <type>Text</type>
</CustomField>