force-app/main/default/objects/msf_opportunity_h__x/fields/nextstep__c.field-meta.xml
<CustomField>
    <fullName>nextstep__c</fullName>
    <description>nextstep</description>
    <externalDeveloperName>nextstep</externalDeveloperName>
    <label>nextstep</label>
    <length>255</length>
    <type>Text</type>
</CustomField>