force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_amount_written_off_c__c.field-meta.xml
<CustomField>
    <fullName>npe01_amount_written_off_c__c</fullName>
    <description>npe01__amount_written_off__c</description>
    <externalDeveloperName>npe01__amount_written_off__c</externalDeveloperName>
    <label>npe01__amount_written_off__c</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>