force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_contact_id_for_role_c__c.field-meta.xml
<CustomField>
    <fullName>npe01_contact_id_for_role_c__c</fullName>
    <description>npe01__contact_id_for_role__c</description>
    <externalDeveloperName>npe01__contact_id_for_role__c</externalDeveloperName>
    <label>npe01__contact_id_for_role__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>