force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_do_not_automatically_create_paymen__c.field-meta.xml
<CustomField>
    <fullName>npe01_do_not_automatically_create_paymen__c</fullName>
    <defaultValue>false</defaultValue>
    <description>npe01__do_not_automatically_create_payment__c</description>
    <externalDeveloperName>npe01__do_not_automatically_create_payment__c</externalDeveloperName>
    <label>npe01__do_not_automatically_create_payme</label>
    <type>Checkbox</type>
</CustomField>