force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_is_opp_from_individual_c__c.field-meta.xml
<CustomField>
    <fullName>npe01_is_opp_from_individual_c__c</fullName>
    <description>npe01__is_opp_from_individual__c</description>
    <externalDeveloperName>npe01__is_opp_from_individual__c</externalDeveloperName>
    <label>npe01__is_opp_from_individual__c</label>
    <length>1300</length>
    <type>LongTextArea</type>
</CustomField>