force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_member_level_c__c.field-meta.xml
<CustomField>
    <fullName>npe01_member_level_c__c</fullName>
    <description>npe01__member_level__c</description>
    <externalDeveloperName>npe01__member_level__c</externalDeveloperName>
    <label>npe01__member_level__c</label>
    <length>255</length>
    <type>Text</type>
</CustomField>