force-app/main/default/objects/msf_opportunity_h__x/fields/npe01_membership_end_date_c__c.field-meta.xml
<CustomField>
    <fullName>npe01_membership_end_date_c__c</fullName>
    <description>npe01__membership_end_date__c</description>
    <externalDeveloperName>npe01__membership_end_date__c</externalDeveloperName>
    <label>npe01__membership_end_date__c</label>
    <type>Date</type>
</CustomField>